--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,571 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    line-height: inherit;
+    margin: 0;
+    --tw-gradient-from: #f6fafd;
+    --tw-gradient-to: rgba(246, 250, 253, 0);
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+    --tw-gradient-to: #fff;
+    --tw-text-opacity: 1;
+    background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+    background-repeat: no-repeat;
+    color: rgb(75 93 104 / var(--tw-text-opacity));
+    font-family: Nunito;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    --tw-text-opacity: 1;
+    color: rgb(33 35 83 / var(--tw-text-opacity));
+    font-family: Open Sans;
+  }
+
+  .h1 {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 1.1;
+  }
+  .btn {
+    --tw-text-opacity: 1;
+    border-radius: 9999px;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+    font-size: 1.125rem;
+    height: 60px;
+    line-height: 1.75rem;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  .btn-primary {
+    --tw-bg-opacity: 1;
+    background-color: rgb(156 105 226 / var(--tw-bg-opacity));
+  }
+
+  .btn-secondary {
+    --tw-bg-opacity: 1;
+    background-color: rgb(240 99 184/var(--tw-bg-opacity))
+}
+
+.container {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    width: 100%
+}
+
+@media (min-width: 640px) {
+    .container {
+        max-width:640px
+    }
+}
+
+@media (min-width: 768px) {
+    .container {
+        max-width:768px
+    }
+}
+
+@media (min-width: 1024px) {
+    .container {
+        max-width:1024px;
+        padding-left: 0;
+        padding-right: 0
+    }
+}
+
+@media (min-width: 1170px) {
+    .container {
+        max-width:1170px
+    }
+}
+
+.absolute {
+    position: absolute
+}
+
+.relative {
+    position: relative
+}
+
+.top-0 {
+    top: 0
+}
+
+.right-0 {
+    right: 0
+}
+
+.top-24 {
+    top: 6rem
+}
+
+.left-0 {
+    left: 0
+}
+
+.-z-10 {
+    z-index: -10
+}
+
+  @media (min-width: 1170px) {
+    .h1 {
+      font-size: 80px;
+    }
+  }
+
+  .h2 {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 1.25
+}
+
+.h3 {
+    font-size: 24px
+}
+
+.lead {
+    --tw-text-opacity: 1;
+    color: rgb(75 93 104/var(--tw-text-opacity));
+    font-family: Nunito;
+    font-size: 1.125rem;
+    font-weight: 500;
+    line-height: 1.75rem;
+    line-height: 1.625
+}
+
+.z-20 {
+    z-index: 20
+}
+
+.-order-1 {
+    order: -1
+}
+
+.my-\[30px\] {
+    margin-bottom: 30px;
+    margin-top: 30px
+}
+
+.mx-auto {
+    margin-left: auto;
+    margin-right: auto
+}
+
+.my-\[75px\] {
+    margin-bottom: 75px;
+    margin-top: 75px
+}
+
+.my-\[70px\] {
+    margin-bottom: 70px;
+    margin-top: 70px
+}
+
+.mb-10 {
+    margin-bottom: 2.5rem
+}
+
+.mt-24 {
+    margin-top: 6rem
+}
+
+.mb-5 {
+    margin-bottom: 1.25rem
+}
+
+.mb-6 {
+    margin-bottom: 1.5rem
+}
+
+.mb-16 {
+    margin-bottom: 4rem
+}
+
+.mb-4 {
+    margin-bottom: 1rem
+}
+
+.mb-\[65px\] {
+    margin-bottom: 65px
+}
+
+.mb-8 {
+    margin-bottom: 2rem
+}
+
+.mb-12 {
+    margin-bottom: 3rem
+}
+
+.mb-\[80px\] {
+    margin-bottom: 80px
+}
+
+.flex {
+    display: flex
+}
+
+.grid {
+    display: grid
+}
+
+.hidden {
+    display: none
+}
+
+.h-\[60px\] {
+    height: 60px
+}
+
+.h-\[358px\] {
+    height: 358px
+}
+
+.h-12 {
+    height: 3rem
+}
+
+.h-full {
+    height: 100%
+}
+
+.h-\[800px\] {
+    height: 800px
+}
+
+.max-h-52 {
+    max-height: 13rem
+}
+
+.max-h-0 {
+    max-height: 0
+}
+
+.max-h-\[330px\] {
+    max-height: 330px
+}
+
+.min-h-\[560px\] {
+    min-height: 560px
+}
+
+.min-h-\[800px\] {
+    min-height: 800px
+}
+
+.w-\[60px\] {
+    width: 60px
+}
+
+.w-full {
+    width: 100%
+}
+
+.w-\[45\%\] {
+    width: 45%
+}
+
+.w-12 {
+    width: 3rem
+}
+
+.max-w-\[474px\] {
+    max-width: 474px
+}
+
+.max-w-\[360px\] {
+    max-width: 360px
+}
+
+.max-w-\[584px\] {
+    max-width: 584px
+}
+
+.max-w-\[530px\] {
+    max-width: 530px
+}
+
+.max-w-\[120px\] {
+    max-width: 120px
+}
+
+.max-w-\[220px\] {
+    max-width: 220px
+}
+
+.max-w-\[260px\] {
+    max-width: 260px
+}
+
+.max-w-\[340px\] {
+    max-width: 340px
+}
+
+.flex-1 {
+    flex: 1 1
+}
+
+.cursor-pointer {
+    cursor: pointer
+}
+
+.grid-cols-1 {
+    grid-template-columns: repeat(1,minmax(0,1fr))
+}
+
+.flex-col {
+    flex-direction: column
+}
+
+.items-start {
+    align-items: flex-start
+}
+
+.items-center {
+    align-items: center
+}
+
+.justify-center {
+    justify-content: center
+}
+
+.justify-between {
+    justify-content: space-between
+}
+
+.gap-\[50px\] {
+    gap: 50px
+}
+
+.gap-y-8 {
+    row-gap: 2rem
+}
+
+.gap-y-4 {
+    row-gap: 1rem
+}
+
+.gap-x-\[30px\] {
+    -webkit-column-gap: 30px;
+    column-gap: 30px
+}
+
+.gap-x-\[20px\] {
+    -webkit-column-gap: 20px;
+    column-gap: 20px
+}
+
+.gap-x-2 {
+    -webkit-column-gap: .5rem;
+    column-gap: .5rem
+}
+
+.gap-y-12 {
+    row-gap: 3rem
+}
+
+.gap-y-14 {
+    row-gap: 3.5rem
+}
+
+.gap-x-4 {
+    -webkit-column-gap: 1rem;
+    column-gap: 1rem
+}
+
+.gap-x-\[120px\] {
+    -webkit-column-gap: 120px;
+    column-gap: 120px
+}
+
+.gap-x-8 {
+    -webkit-column-gap: 2rem;
+    column-gap: 2rem
+}
+
+.overflow-hidden {
+    overflow: hidden
+}
+
+.rounded-\[50px\] {
+    border-radius: 50px
+}
+
+.rounded-full {
+    border-radius: 9999px
+}
+
+.rounded {
+    border-radius: .25rem
+}
+
+.rounded-\[20px\] {
+    border-radius: 20px
+}
+
+.border {
+    border-width: 1px
+}
+
+.border-t-2 {
+    border-top-width: 2px
+}
+
+.border-accent-primary {
+    --tw-border-opacity: 1;
+    border-color: rgb(156 105 226/var(--tw-border-opacity))
+}
+
+.bg-accent-secondary\/\[15\%\] {
+    background-color: rgba(240,99,184,.15)
+}
+
+.bg-accent-primary\/20 {
+    background-color: rgba(156,105,226,.2)
+}
+
+.bg-primary\/10 {
+    background-color: rgba(33,35,83,.1)
+}
+
+.bg-accent-tertiary {
+    --tw-bg-opacity: 1;
+    background-color: rgb(104 201 186/var(--tw-bg-opacity))
+}
+
+.bg-white {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255/var(--tw-bg-opacity))
+}
+
+.bg-accent-primary {
+    --tw-bg-opacity: 1;
+    background-color: rgb(156 105 226/var(--tw-bg-opacity))
+}
+
+.px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem
+}
+
+.py-12 {
+    padding-bottom: 3rem;
+    padding-top: 3rem
+}
+
+.px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem
+}
+
+.px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem
+}
+
+.py-8 {
+    padding-bottom: 2rem;
+    padding-top: 2rem
+}
+
+.px-\[35px\] {
+    padding-left: 35px;
+    padding-right: 35px
+}
+
+.px-2 {
+    padding-left: .5rem;
+    padding-right: .5rem
+}
+
+.pb-12 {
+    padding-bottom: 3rem
+}
+
+.pt-\[60px\] {
+    padding-top: 60px
+}
+
+.pb-\[50px\] {
+    padding-bottom: 50px
+}
+
+.text-center {
+    text-align: center
+}
+
+.text-sm {
+    font-size: .875rem;
+    line-height: 1.25rem
+}
+
+.text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem
+}
+
+.text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem
+}
+
+.text-xl {
+    font-size: 1.25rem
+}
+
+.text-lg,.text-xl {
+    line-height: 1.75rem
+}
+
+.text-lg {
+    font-size: 1.125rem
+}
+
+.font-light {
+    font-weight: 300
+}
+
+.font-bold {
+    font-weight: 700
+}
+
+.font-extrabold {
+    font-weight: 800
+}
+
+.font-semibold {
+    font-weight: 600
+}
+
+.italic {
+    font-style: italic
+}
+
+.text-accent-primary {
+    --tw-text-opacity: 1;
+    color: rgb(156 105 226/var(--tw-text-opacity))
+}
+
+.text-primary {
+    --tw-text-opacity: 1;
+    color: rgb(33 35 83/var(--tw-text-opacity))
+}
+
+.text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255/var(--tw-text-opacity))
+}
+
+.shadow-xl {
+    --tw-shadow: 0 20px 25px -5px rgba(0,0,0,.1),0 8px 10px -6px rgba(0,0,0,.1);
+    --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color),0 8px 10px -6px var(--tw-shadow-color);
+    box-shadow: 0 0 #0000,0 0 #0000,var(--tw-shadow);
+    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow)
+}
+}
