--- a/src/index.css
+++ b/src/index.css
@@ -568,4 +568,20 @@
     box-shadow: 0 0 #0000,0 0 #0000,var(--tw-shadow);
     box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow)
 }
+
+.swiper-wrapper {
+    min-height: 400px;
+  }
+  .swiper-horizontal > .swiper-pagination-bullets,
+  .swiper-pagination-bullets.swiper-pagination-horizontal {
+    width: 50%;
+  }
+  .swiper-pagination-bullet {
+    background-color: white;
+    opacity: 1;
+  }
+  .swiper-pagination-bullet-active {
+    background-color: #f063b8 !important;
+  }
+  
 }
